--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,5 +1,5 @@
 .Contact {
-  height: 48px;
+  min-height: 48px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
