--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -10,16 +10,15 @@
   width: 344px;
   position: sticky;
   top: 56px;
-  padding-top: 16px;
-  padding-left: 8px;
+  padding: 16px 20px 0 8px;
   box-sizing: border-box;
   align-self: flex-start;
   height: calc(100vh - 56px);
-  overflow: hidden;
+  overflow: overlay;
 }
 
-.Home .sidebar:hover {
-  overflow-y: auto;
+.Home .sidebar:hover::-webkit-scrollbar-thumb {
+  visibility: visible;
 }
 
 .Home .people-you-may-know .title {
@@ -36,7 +35,7 @@
 }
 
 .Home .me-link {
-  height: 48px;
+  min-height: 48px;
   border-radius: 8px;
   display: flex;
   align-items: center;
