--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -400,6 +400,10 @@
   padding: 0;
   position: absolute;
   right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 0;
 }
 
 .Post > .confirm-delete-popup .close-btn:hover {
